@@ -3,8 +3,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- SERVER_CREATE/SERVER_MERGE
-
 - stronghold patches [Todd R. Eigenschink <todd@tekinteractive.com>]
 
 - Andrew Ford's Apache::FakeRequest patch
